# dendro_analyses

./: README.md  environment.yml
.devcontainer/: devcontainer.json
.github/workflows/: gcr_cebra1.yml  gcr_dendro1.yml
apps/: make_spec.sh
apps/cebra1/: Dockerfile  main.py  spec.json
apps/dendro1/: Dockerfile  main.py  spec.json
apps/dendro1/folder_io/: folder_io.py
apps/dendro1/quip/: quip.py
apps/dendro1/tuning_curves_2d/: tuning_curves_2d.py
apps/dendro1/units_vis/: NwbExtractors.py  create_units_vis.py  units_vis.py
projects/D-000128/: README.md  main.ipynb  main_eye_pos.ipynb  pyproject.toml
projects/D-000129/: main.ipynb  submit_cebra.py
projects/D-000582/: README.md  TuningCurves2DView.py  main.ipynb  submit_jobs.py  test.py
projects/eb87e88a/: test_notebook.ipynb
projects/test/: test_input_output_folders.py
testing/dandi-nwb-meta/: .gitignore  dandi_nwb_meta.py  test.ipynb
