[tool.poetry]
name = "d-000128"
version = "0.1.0"
description = ""
authors = ["Jeremy Magland"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
h5py = "^3.10.0"
pynwb = "^2.5.0"
pynapple = "^0.5.0"
dendro = "^0.1.24"
remfile = "^0.1.9"
figurl = "^0.2.22"
kachery-cloud = "^0.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
